test: Написать тесты для TaskManager